# Ro-Labs-2025

./: .clang-format  Box.h  CMakeLists.txt  Inventory.h  Polynomial.cpp  Polynomial.h  Term.h  fraction.cpp  fraction.h  head_lab1.hpp  main_l3.cpp  main_l4.cpp  main_l5.cpp  main_l6.cpp  main_l7.cpp  main_l8.cpp  main_lab1.cpp  main_lab2.cpp  main_lab_1_2.cpp  main_planet.cpp  planetLogic.cpp  planetLogic.hpp  tasks.cpp  tasks.h  term.cpp  test.cpp
house/: CMakeLists.txt  house.cpp  house.hpp
include/: Administration.h  Engineer.h  Staff.h  Worker.h
lib/: CMakeLists.txt  stack.h
myprint/: CMakeLists.txt  myprint.cpp  myprint.hpp
planet/: planet.cpp  planet.hpp
stack/: stack.h
vecLib/: CMakeLists.txt  MySet.cpp  MySet.h  MyVector.h
